# validate-docbr

./: .gitignore  .markdownlintignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  Taskfile.yml  pyproject.toml  setup.py
.claude/agents/: python-expert.md  reviewer.md  test-runner.md
.claude/commands/: review.md
.githooks/: pre-push
.github/workflows/: cd.yml  ci.yml  docs.yml  release.yml
docs/: README.md  _coverpage.md  _sidebar.md  guia-de-uso.md  index.html  sobre.md
tests/: test_CNPJ.py  test_CNS.py  test_CPF.py  test_Certidao.py  test_DocumentBase.py  test_generic.py
validate_docbr/: CNH.py  CNPJ.py  CNS.py  CPF.py  Certidao.py  DocumentBase.py  PIS.py  RENAVAM.py  TituloEleitoral.py  generic.py
